[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/enemy/sprites/edu.png" type="Texture" id=2]
[ext_resource path="res://assets/enemy/sprites/cesarr.png" type="Texture" id=3]
[ext_resource path="res://assets/enemy/Explosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/enemy/sprites/boli.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Boli",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Cesar",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Edu",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 18 )

[node name="Enemy" type="Area2D" groups=["enemy"]]
script = ExtResource( 1 )
Explosion = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Edu"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -13, -18, 26, 37 )

[node name="ExplosionSpawn" type="Position2D" parent="."]
position = Vector2( 0, 19 )

[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
